Common starters and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=DummyJSONApp
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/DummyJSON
+spring.datasource.username=postgres
+spring.datasource.password=7953
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.port=8080
